[gd_scene load_steps=29 format=3 uid="uid://d1vbg5pgcu12h"]

[ext_resource type="Script" path="res://scripts/xr/area_selection.gd" id="1_skxaj"]
[ext_resource type="Script" path="res://scripts/xr/XRRoot.gd" id="1_yij0d"]
[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="2_dnwog"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="3_6llfu"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="4_yemrl"]
[ext_resource type="ArrayMesh" uid="uid://dmc8gqvihqde6" path="res://assets/models/meta_quest_3_low_poly_oculus_quest/controller_L.res" id="5_bn8ue"]
[ext_resource type="Shader" path="res://resources/shaders/area_selection.gdshader" id="5_x0mkx"]
[ext_resource type="Shader" path="res://resources/shaders/area_selection_box.gdshader" id="6_jgcka"]
[ext_resource type="Script" path="res://scripts/xr/VisualRect.gd" id="6_or88q"]
[ext_resource type="ArrayMesh" uid="uid://cpmv8y5s6r242" path="res://assets/models/meta_quest_3_low_poly_oculus_quest/buttons_L.res" id="6_skx5m"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="7_gorbh"]
[ext_resource type="PackedScene" uid="uid://mav1gffmbtgm" path="res://scenes/ui/Console.tscn" id="8_k6ki1"]
[ext_resource type="ArrayMesh" uid="uid://cbkkbup0jusbp" path="res://assets/models/meta_quest_3_low_poly_oculus_quest/controller_R.res" id="9_gaopi"]
[ext_resource type="ArrayMesh" uid="uid://7tte2e2dhgfx" path="res://assets/models/meta_quest_3_low_poly_oculus_quest/buttons_R.res" id="10_hwlnk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_raq8r"]
radius = 0.035

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvge6"]
shading_mode = 0
albedo_color = Color(0, 0.586607, 0.666785, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7elk0"]
shading_mode = 0
albedo_color = Color(0.604484, 0.894514, 0.953602, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6kaeg"]
shading_mode = 0
albedo_color = Color(0.603922, 0.894118, 0.952941, 1)

[sub_resource type="SphereMesh" id="SphereMesh_k0vif"]
radius = 0.002
height = 0.004

[sub_resource type="CylinderMesh" id="CylinderMesh_pc1dh"]
top_radius = 0.001
bottom_radius = 0.001
height = 0.1
radial_segments = 4
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t2i07"]
shading_mode = 0
albedo_color = Color(0.510002, 0.784558, 0.0312505, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rtjqm"]
shading_mode = 0
albedo_color = Color(0.23888, 0.545174, 0.862715, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rufoj"]
shading_mode = 0
albedo_color = Color(0.894469, 0.207614, 0.317525, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bdexb"]
size = Vector3(2, 1, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_63ego"]
render_priority = 0
shader = ExtResource("6_jgcka")
shader_parameter/size_y = 1.0
shader_parameter/color = Color(0.556863, 0.854902, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_ro7t5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6weh"]
render_priority = 0
shader = ExtResource("5_x0mkx")
shader_parameter/color = Color(0.556863, 0.854902, 1, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xjicv"]

[node name="AreaSelection" type="Node3D"]
script = ExtResource("1_skxaj")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
script = ExtResource("1_yij0d")
_passtrough = true

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Area3D" type="Area3D" parent="XROrigin3D/XRCamera3D"]
collision_layer = 524288
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/XRCamera3D/Area3D"]
shape = SubResource("SphereShape3D_raq8r")

[node name="XRControllerLeft" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/XRControllerLeft" instance=ExtResource("2_dnwog")]
visible = false

[node name="ControllerRoot" type="Node3D" parent="XROrigin3D/XRControllerLeft"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="XROrigin3D/XRControllerLeft/ControllerRoot"]
transform = Transform3D(-1, 7.6194e-09, -8.70901e-08, 0, 0.996195, 0.0871557, 8.74228e-08, 0.0871557, -0.996195, -9, 2, -3.5)
mesh = ExtResource("5_bn8ue")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="XROrigin3D/XRControllerLeft/ControllerRoot"]
transform = Transform3D(-1, 7.6194e-09, -8.70901e-08, 0, 0.996195, 0.0871557, 8.74228e-08, 0.0871557, -0.996195, -9, 2, -3.5)
mesh = ExtResource("6_skx5m")
skeleton = NodePath("../..")

[node name="Viewport2Din3D" parent="XROrigin3D/XRControllerLeft" instance=ExtResource("7_gorbh")]
transform = Transform3D(1, 0, 0, 0, 0.715022, 0.699102, 0, -0.699102, 0.715022, 0.184834, -0.0624614, 0.0642705)
screen_size = Vector2(0.3, 0.2)
scene = ExtResource("8_k6ki1")
viewport_size = Vector2(600, 400)
unshaded = true

[node name="XRControllerRight" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/XRControllerRight" instance=ExtResource("3_6llfu")]
visible = false

[node name="FunctionPointer" parent="XROrigin3D/XRControllerRight" instance=ExtResource("4_yemrl")]
unique_name_in_owner = true
transform = Transform3D(0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, -0.0140055, 0, 0.0215163)
distance = 6.0
laser_length = 1
laser_material = SubResource("StandardMaterial3D_jvge6")
laser_hit_material = SubResource("StandardMaterial3D_7elk0")
show_target = true
target_radius = 0.03
target_material = SubResource("StandardMaterial3D_6kaeg")
collide_with_bodies = false
collide_with_areas = true

[node name="ControllerRoot" type="Node3D" parent="XROrigin3D/XRControllerRight"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight/ControllerRoot"]
transform = Transform3D(-1, -7.6194e-09, 8.70901e-08, 0, 0.996195, 0.0871557, -8.74228e-08, 0.0871557, -0.996195, 9, 2, -3.5)
mesh = ExtResource("9_gaopi")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight/ControllerRoot"]
transform = Transform3D(-1, -7.6194e-09, 8.70901e-08, 0, 0.996195, 0.0871557, -8.74228e-08, 0.0871557, -0.996195, 9, 2, -3.5)
mesh = ExtResource("10_hwlnk")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="XROrigin3D/XRControllerRight"]
transform = Transform3D(0.11, 0, 0, 0, 0.11, 0, 0, 0, 0.11, 0, 0.0485446, 0.05416)
billboard = 1
text = "2.0 3.0"
font_size = 24
outline_size = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight"]
mesh = SubResource("SphereMesh_k0vif")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_t2i07")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.05)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rtjqm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="XROrigin3D/XRControllerRight/MeshInstance3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.05, 0, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rufoj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D"]
transform = Transform3D(3.995, 0, 0, 0, 3.995, 0, 0, 0, 3.995, 0, 0, 0)
mesh = SubResource("SphereMesh_k0vif")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_t2i07")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="XROrigin3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.05)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rtjqm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="XROrigin3D/MeshInstance3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.05, 0, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rufoj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.882149, 0.351297, 0.313693, -0.37624, 0.125006, 0.918051, 0.283295, -0.927881, 0.242446, 0, 0, 0)
light_angular_distance = 0.5

[node name="BottomSoftLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
light_color = Color(0.556909, 0.854902, 1, 1)
light_energy = 0.25
light_angular_distance = 50.0
sky_mode = 1

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_bdexb")
surface_material_override/0 = SubResource("ShaderMaterial_63ego")
script = ExtResource("6_or88q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D2"]
transform = Transform3D(1.25, 0, 0, 0, 1, 0, 0, 0, 1.25, 0, -0.5, 0)
mesh = SubResource("PlaneMesh_ro7t5")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_o6weh")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D2"]
mesh = SubResource("SphereMesh_k0vif")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D2/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_t2i07")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D2/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.05)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rtjqm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D2/MeshInstance3D2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.05, 0, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rufoj")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 1048576
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("WorldBoundaryShape3D_xjicv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("SphereMesh_k0vif")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_t2i07")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.05)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rtjqm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.05, 0, 0)
mesh = SubResource("CylinderMesh_pc1dh")
surface_material_override/0 = SubResource("StandardMaterial3D_rufoj")
